--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Finance Logger</title>
 </head>
-<body>
-<h1 class="text-purple-500 text-2xl container" id="name">Finance Logger</h1>
-
+<body class="p-8">
+<h1 class="text-purple-500 text-2xl text-center">Finance Logger</h1>
 <script src="./bundle.js"></script>
 </body>
 </html>
